--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+  <% flash.each do |type,msg| %>
+        <li> <%= msg %></li>
+    <% end %>
     <%= yield %>
   </body>
 </html>
