--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,11 @@
   </head>
 
   <body>
-  <% flash.each do |type,msg| %>
-        <li> <%= msg %></li>
-    <% end %>
+  <div class="container">
+  <% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% end %>
+  </div>
     <%= yield %>
   </body>
 </html>
