--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -10,23 +10,20 @@
       </ul>
     </div>
   <% end %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+      <div class="field">
+        <%= form.label :title %>
+        <%= form.text_field :title, id: :post_title %>
+      </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title, id: :post_title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body, id: :post_body %>
-  </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.number_field :user_id, id: :post_user_id %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+      <div class="field">
+        <%= form.label :body %>
+        <%= form.text_area :body, id: :post_body %>
+      </div>
+      <div class="actions">
+        <%= form.submit %>
+      </div>
 <% end %>
+  </div>
+</div>
