--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
 		  <ul class="nav navbar-nav navbar-right">
 			  <li><%= link_to "Home",    root_path %></li>
 				<li><%= link_to "Posts", posts_path %></li>
-				<% if logged_in ? %>
+				<% if logged_in? %>
 					<li><%= link_to "New post", new_post_path %></li>
 					<li class="dropdown">
 					  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -21,7 +21,7 @@
 						</ul>
 					</li>
 				<% else %>
-				<%= link_to "Log in", login_path %>
+				<li><%= link_to "Log in", login_path %></li>
 				<% end %>
 			</ul>
 		</nav>
