--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,29 +3,19 @@
 <h1>Posts</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
   <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= post.user_id %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <ul class="posts">
+  <% @posts.each do |post| %>
+	  <li>
+			Title: <%= post.title %><br>
+			<% if logged_in? %>
+			  <% user = User.find(post.user_id) %>
+				Author: <%= user.name %><br>
+			<% end %>
+			Post: <%= post.body %>
+		</li><br>
+	<% end %>
+</ul>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Post', new_post_path %>
