--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,20 @@
 <% provide(:title, "Home") %>
+<% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
 <div class="center jumbotron">
 	<%# <h1>Members Only App</h1> %>
 	<%= link_to image_tag("siteimage.png", alt: "Site logo", class: "welcome"),'#' %>	
@@ -9,3 +25,4 @@
 
 	<%= link_to "Sign up!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
+<% end %>
